Fix for 3.3
